--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Kenneth Duron | WDD 130</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies commodo nunc, quis ornare odio finibus et. Fusce et ligula et metus tempor tempor vel quis odio. Suspendisse potenti. Pellentesque quis magna nec urna consectetur suscipit sit amet sit amet mi. Sed commodo, diam ut posuere condimentum, eros ante commodo lacus, a lobortis nibh urna vel massa. Quisque ultrices, ante quis auctor elementum, est sem venenatis leo, id pretium ligula augue vel mi. Vivamus at venenatis erat. Curabitur hendrerit magna lacus, eu ultrices quam bibendum sed. Nunc tempor mollis neque, vel pharetra urna ornare id.
         </p>
-        <img src="images/kenny.jpeg" alt="Hello, my Name Kenneth Duron">
+        <img src="images/profile.jpeg" alt="Hello, my Name Kenneth Duron">
     </main>
     <footer>©️ 2024 | Kenneth Duron | Honduras</footer>
 </body>
