Fixed error tags

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kenneth Duron">
-    <meta name="description" content="a common layout on the web called the 'holy grail'"
-    <title>Document</title>
+    <meta name="description" content="a common layout on the web called the 'holy grail'">
+    <title>Kenneth Duron</title>
 </head>
-<body
+<body>
     <header>
     <h1>Kenneth Duron</h1>
 </header>
 <nav>
     <ul>
-       <li><a href="https://byui.edu">BYU-Idaho</a><li>
+       <li><a href="https://byui.edu">BYU-Idaho</a></li>
         <li><a href="https:churchofjesuschrist.org">The Church</a></li>
     </ul>
 </nav>
 <main>
     <section>
-        <h2>Heading</h2>
+        <h2>Kenneth Duron</h2>
         <p>Hello, this is Kenneth</p>
     </section>
 </main>
 <aside>
-    <img src="https://www.churchofjesuschrist.org/?lang=eng&gad_source=1&gclid=Cj0KCQjwo8S3BhDeARIsAFRmkOOzVpC3ml7V6av_yAHW9dx8XrNankKGeUCbZNoHev60MQEDzfjbhocaArxzEALw_wcB" alt="Church">
+    <img src="images/jesus-christ.webp">
 </aside>
 <footer> Kenneth Duron</footer>
 </body>
