--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kenneth Duron">
     <meta name="description" content="a common layout on the web called the 'holy grail'">
-    <title>Kenneth Duron</title>
+    <title>Holy Grail Layout Example</title>
 </head>
 <body>
     <header>
-    <h1>Kenneth Duron</h1>
+    <h1>Holy Grail Layout Example</h1>
 </header>
 <nav>
     <ul>
        <li><a href="https://byui.edu">BYU-Idaho</a></li>
-        <li><a href="https:churchofjesuschrist.org">The Church</a></li>
+        <li><a href="https://churchofjesuschrist.org">The Church</a></li>
     </ul>
 </nav>
 <main>
@@ -22,9 +22,13 @@
         <h2>Kenneth Duron</h2>
         <p>Hello, this is Kenneth</p>
     </section>
+    <section>
+        <h2>Holy Grail</h2>
+        <p>Hello, how's it going?</p>
+    </section>
 </main>
 <aside>
-    <img src="images/jesus-christ.webp">
+    <img src="images/jesus-christ.webp" width="200" height="200" alt="Jesus Christ image">
 </aside>
 <footer> Kenneth Duron</footer>
 </body>
