renames the image name

--- a/week02/HTML/index.html
+++ b/week02/HTML/index.html
@@ -13,7 +13,7 @@
         <h1>
             Welcome to the CCS Challenge!
         </h1>
-        <img src="/styles/ECHO-FRONT-FULL_2048x.webp" alt="guitar image">
+        <img src="../../images/guitar-image.webp" alt="guitar image">
     </section>
 </body>
 </html>
