--- a/challenge/week02/index.html
+++ b/challenge/week02/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../../styles1/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <nav>
@@ -13,7 +13,7 @@
         <h1>
             Welcome to the CCS Challenge!
         </h1>
-        <img src="../../images/guitar-image.webp" alt="guitar image">
+        <img src="images/guitar-image.webp" alt="guitar image">
     </section>
 </body>
 </html>
